--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <style src="styles.css"></style>
 </head>
 <script>
     const pwg = new PasswordGenerator();
@@ -25,7 +26,7 @@
     }
     
     function generateTableRow(password) {
-        return "<tr><td>" + password + "</td><td><button type='button' class='btn btn-light copy-button'>Copy</button><button type='button' class='btn btn-danger delete-button'>Delete</button></td></tr>";
+        return "<tr><td><span class='d-inline-block text-truncate' style='max-width:40svw;'>" + password + "</span></td><td><button type='button' class='btn btn-light copy-button'>Copy</button><button type='button' class='btn btn-danger delete-button'>Delete</button></td></tr>";
     }
     $(document).on("click", ".delete-button", function(e) {
         $(e.target).closest("tr").remove();
