--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
     function generatePassword() {
         //warn no level selected
         if ($("#securityLevel").val() == "Choose...") {
-            alert("Please select a security level.");
-            //TODO:
-            //make this a bootstrap alert
-            // or flashing red border around the select box
-            // or flashing yellow in the select box
-            
+            $("#inputAlertContainer").append(generateDangerAlert("Please select a security level."));
             return;
         }
         // Get the password length and security level from the input fields
@@ -57,6 +52,9 @@
             $(e.target).text("Copy").removeClass("btn-success").addClass("btn-light");
         }, 1000);
     });
+    function generateDangerAlert(message) {
+        return "<div class='alert alert-danger alert-dismissible fade show' role='alert'>" + message + "<button type='button' class='btn-close' data-bs-dismiss='alert' aria-label='Close'></button></div>";
+    }
 </script>
 <body>
     <div class="container">
@@ -91,6 +89,7 @@
                     </tbody>
                 </table>
                 <h2>Generate a password</h2>
+                <div id="inputAlertContainer"></div>
                 <div class="input-group">
                     <label class="input-group-text" for="passwordLength">Password length:</label>
                     <input type="number" class="form-control" id="passwordLength" value="8" min="1" max="1000000">
@@ -109,5 +108,8 @@
                     <tbody>
                     </tbody>
                 </table>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
