--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Password Generator</title>
     <script src="PasswordGenerator.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,14 +15,28 @@
 <script>
     const pwg = new PasswordGenerator();
     function generatePassword() {
+        let alerted = false;
         //warn no level selected
         if ($("#securityLevel").val() == "Choose...") {
             $("#inputAlertContainer").append(generateDangerAlert("Please select a security level."));
-            return;
+            alerted = true;
         }
+        // alert no length selected
+        if ($("#passwordLength").val() == "" || $("#passwordLength").val() <= 0) {
+            $("#inputAlertContainer").append(generateDangerAlert("Please enter a positive password length."));
+            alerted = true;
+        }
+        // alert length is too long
+        if ($("#passwordLength").val() > 1000000) {
+            $("#inputAlertContainer").append(generateDangerAlert("Please enter a password length less than 1,000,000."));
+            alerted = true;
+        }
+
+        if (alerted) return;
+        
         // Get the password length and security level from the input fields
-        let passwordLength = $("#passwordLength").val() != "" && $("#passwordLength").val() <= 1000000? $("#passwordLength").val() : 8;
-        let securityLevel = $("#securityLevel").val() != "" ? $("#securityLevel").val() : 3;
+        let passwordLength = $("#passwordLength").val();
+        let securityLevel = $("#securityLevel").val();
         // Generate a password using the PasswordGenerator class
         let generatedPassword = pwg.generate(passwordLength, securityLevel);
         // Add the generated password to the table
@@ -53,9 +67,20 @@
         }, 1000);
     });
     function generateDangerAlert(message) {
-        return "<div class='alert alert-danger alert-dismissible fade show' role='alert'>" + message + "<button type='button' class='btn-close' data-bs-dismiss='alert' aria-label='Close'></button></div>";
+        return "<div class='alert alert-danger d-flex align-items-center alert-dismissible fade show' role='alert'><svg class='bi flex-shrink-0 me-2' width='24' height='24' role='img' aria-label='Danger:''><use xlink:href='#exclamation-triangle-fill'/></svg><div>" + message + "</div><button type='button' class='btn-close' data-bs-dismiss='alert' aria-label='Close'></button></div>";
     }
 </script>
+<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+    </symbol>
+    <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+    </symbol>
+    <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+    </symbol>
+</svg>
 <body>
     <div class="container">
         <div class="row">
